--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
         <title>MY BETTER HTML</title>
     </head>
     <link rel="stylesheet" href="css folder\styles.css">
-    <link rel="icon" href="favicon.ico">
+    <link rel="icon" href="images\favicon.ico">
     <link href="https://fonts.googleapis.com/css2?family=Recursive:wght@300&family=Sacramento&family=Shadows+Into+Light&display=swap" rel="stylesheet">
     <body>
         <div class="top-container">
